--- a/index2.html.html
+++ b/index2.html.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
-                    <div style="background:brown;height: 200px;">
+                    <div style="background:cornflowerblue;height: 200px;">
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
