--- a/index4.html.html
+++ b/index4.html.html
@@ -12,12 +12,16 @@
     <body>
 
         <div class="container">
-            <div class="row>">
-            <!--    <div class="col-lg-3 col-md-3 col-sm-6">
+
+
+            <h1>git test</h1>
+      <!--      <div class="row>">
+                <div class="col-lg-3 col-md-3 col-sm-6">
                     <div style="background: rebeccapurple;height: 200px;">
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
+                    <h1>git test</h1>
                     <div style="background:yellowgreen;height: 200px;">
                     </div>
                 </div>
@@ -31,7 +35,6 @@
                 </div>
 
             </div> -->
-            <h1>git test part 2</h1>
         </div>
 
 
